--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,7 +7,7 @@ $serif: 'Playfair Display', serif;
 $sans-serif: 'Montserrat', sans-serif;
 
 // TYPE //
-h2, h3, h4, h5 {
+h2, h3, h4, h5, h6, h8, h9 {
     font-family: $serif;
 }
 h2 {
@@ -40,9 +40,30 @@ h5 {
     font-size: 25px;
     font-weight: 700;
 }
+h6 {
+    font-size: 50px;
+    text-transform: uppercase;
+}
+h7 {
+    font-family: $sans-serif;
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    line-height: 1.4;
+}
+h8 {
+    font-size: 72px;
+    text-transform: uppercase;
+}
+h9 {
+    font-size: 40px;
+    text-transform: uppercase;
+}
 a {
     color: $pink;
     text-decoration: none;
+}
+a.bold-link {
+    font-weight: 700;
 }
 // TYPE //
 
@@ -66,6 +87,18 @@ a {
         opacity: 1;
     }
 }
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(70px);
+    }
+    50% {
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 1;
+    }
+}
 // ANIMATIONS //
 
 body {
@@ -76,6 +109,10 @@ body {
     background-color: $black;
     color: $pink;
     position: relative;
+    &.project {
+        background-color: $pink;
+        color: $black;
+    }
 }
 
 header {
@@ -83,11 +120,18 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 5;
     background-color: $black;
     opacity: 0;
     animation: headerFade 2s ease;
     animation-delay: .5s;
     animation-fill-mode: forwards;
+    &.project {
+        background-color: $pink;
+        a {
+            color: $black;
+        }
+    }
     .header-inner {
         width: 100%;
         padding: 32px 170px;
@@ -174,11 +218,83 @@ section.clients {
     }
 }
 
+section.about {
+    margin: 110px 0 0 0;
+    .about-inner {
+        padding: 0 40px 0 200px;
+        .about-content {
+            opacity: 0;
+            animation: fadeIn 2s ease;
+            //animation-delay: .5s;
+            animation-fill-mode: forwards;
+            .about-copy {
+                max-width: 900px;
+                margin-bottom: 80px;
+                h6 {
+                    margin-bottom: 60px;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+            .about-info {
+                display: flex;
+                justify-content: space-between;
+                ul {
+                    margin-bottom: 110px;
+                }
+            }
+        }
+    }
+}
+
+section.project {
+    margin: 140px 0 110px 0;
+    .project-inner {
+        padding: 0 0 0 200px;
+        .project-content {
+            opacity: 0;
+            animation: fadeIn 2s ease;
+            //animation-delay: .5s;
+            animation-fill-mode: forwards;
+            .project-copy {
+                margin-bottom: 110px;
+                padding-right: 40px;
+                h8, h9 {
+                    display: block;
+                }
+                h8 {
+                    margin-bottom: 120px;
+                }
+            }
+            .project-image {
+                margin-bottom: 30px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
+            }
+        }
+    }
+}
+
 footer {
     background-color: $pink;
     color: $black;
     a {
         color: $black;
+    }
+    &.project {
+        background-color: $black;
+        color: $pink;
+        a {
+            color: $pink;
+        }
     }
     .footer-inner {
         padding: 200px;
