--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -102,7 +102,7 @@ h6 {
         font-size: 32px;
     }
     @include mq-small {    
-        font-size: 22px;
+        font-size: 20px;
     }
 }
 h7 {
@@ -410,6 +410,31 @@ section.about {
     .about-inner {
         padding: 0 40px 0 200px;
         .about-content {
+            position: relative;
+            .about-image {
+                position: absolute;
+                z-index: -1;
+                width: 640px;
+                height: 640px;
+                top: 240px;
+                right: 50px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                @include mq-medium {
+                    width: 400px;
+                    height: 400px;
+                    top: 140px;
+                }
+                @include mq-small {
+                    width: auto;
+                    height: auto;
+                    position: unset;
+                    margin-bottom: 40px;
+                }
+            }
             .about-copy {
                 max-width: 900px;
                 margin-bottom: 80px;
@@ -431,6 +456,34 @@ section.about {
                 justify-content: space-between;
                 ul {
                     margin-bottom: 110px;
+                    @include mq-small {
+                        margin-bottom: 40px;
+                        &:last-child {
+                            margin-bottom: 56px;
+                        }
+                        li {
+                            margin-bottom: 16px;
+                        }
+                        h7 {
+                            display: block;
+                            &.title {
+                                font-family: $serif;
+                                font-size: 20px;
+                                text-transform: uppercase;
+                            }
+                        }
+                    }
+                }
+                &.desktop {
+                    @include mq-small {
+                        display: none;
+                    }
+                }
+                &.mobile {
+                    display: none;
+                    @include mq-small {
+                        display: inline-block;
+                    }
                 }
             }
         }
