--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -191,6 +191,7 @@ header {
     width: 100%;
     z-index: 5;
     background-color: $black;
+    font-weight: 500;
     opacity: 0;
     animation: headerFade 2s ease;
     animation-delay: .5s;
@@ -269,6 +270,7 @@ header {
     top: 0;
     left: 0;
     background-color: $black;
+    font-weight: 500;
     opacity: 0;
     pointer-events: none;
     transition: all ease .4s;
@@ -425,10 +427,10 @@ section.about {
                     height: 100%;
                     object-fit: cover;
                 }
-                @include mq-medium {
+                @include mq-large {
                     width: 400px;
                     height: 400px;
-                    top: 140px;
+                    top: 100px;
                 }
                 @include mq-small {
                     width: auto;
